--- a/final.html
+++ b/final.html
@@ -52,14 +52,22 @@
 	
 	<!-- Section content-->
 	<section id="Content">
-			<h2> final content </h2>
-	       <p> replace this text with project and assigments examples</p>
+			<h1> ______Final__Project_______ </h1>
+	       <p>       <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/141851693/?autostart=false" frameborder="0" allowfullscreen></iframe>
+    </p>
+	<h2> Description: </h2>
+		   <p> I used Scratch to create my final project. I did a story that theres a mini-game inside.</p>
+           <h3> Concepts Learned: </h3>
+		   <p> <li>I used a lot of sprites and background</li> 
+		   <li>I created a "disapearing" block.</li> 
+		   <li>I used loops when the mouse pointer is over buttons and staff.</li> 
+		   <li>I created variables that will have the name, and other staff.</li>
+		   </p>
 	</section> <!-- end Content-->
 	
 	<!-- Aside Content-->
 	<aside id="hobbies">
-	<p> place things you like here;
-	photos, links, videos, etc. </p>
+	<p> BAM WAT </p>
 	
 	</aside> <!-- end Hobbies-->
 	
